[package]
name = "log-panics"
version = "2.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A panic hook which logs panic messages rather than printing them"
repository = "https://github.com/sfackler/rust-log-panics"
readme = "README.md"

[features]
with-backtrace = ["backtrace"]
with-tracing = ["tracing]
with-log = ["log"]
default = ["with-log"]

[dependencies]
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
backtrace = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.7"

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
